Wed Mar  4 08:14:35 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Process_Manager_Test.cpp:
          Added missing ACE_TEXT.

Tue Mar  3 19:59:10 UTC 2009  Olli Savia  <ops@iki.fi>

        * apps/JAWS/clients/Blobby/Blob_Handler.cpp:
          Fixed compile warning.

Tue Mar  3 19:43:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Process_Manager_Test.cpp:
          Fixed gcc's "zero-length format string" warning.

Tue Mar  3 13:32:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
        * bin/performance_stats.sh:
        * html/Stats/performance.shtml:
        * html/Stats/simple_footprint.shtml:
          Don't generate thumbnails, just show the original graphs on 320x240

Tue Mar  3 11:13:48 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Fixed cross compilation settings and changed default cross compilation
          platform to Linux.

Tue Mar  3 10:42:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/compilation.shtml:
        * html/Stats/footprint.shtml:
        * html/Stats/navigation.html:
        * html/Stats/performance.shtml:
          Updated links to the new results

Tue Mar  3 07:46:45 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Add -lrpc to LIBS if rpc=1.

Tue Mar  3 07:35:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Unbounded_Set_Test.cpp:
          Also test the is_empty() method

        * tests/Log_Msg_Backend_Test.cpp:
          Directly assign variable

Tue Mar  3 05:27:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/net/os_if.h:
          Fixed errors caused by previous commit.

Mon Mar  2 19:58:57 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/os_include/net/os_if.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed legacy ACE_HAS_STL_MAP_CONFLICT macro.
